<resources>
    <string name="app_name">Dict Talk</string>
    <string name="textview">TextView</string>
    <string name="title_activity_my_lists_main">MyListsMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_main">Sign in</string>

    <!-- Strings related to login -->
    <string name="connecting_to_server">Connecting to the server. Please Wait&#8230;</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_email">Please enter email</string>

    <!-- Labels from Profile Activities -->
    <string name="contributions_label">Contributions</string>
    <string name="likes_counter_label">Likes: </string>
    <string name="dislikes_counter_label">Dislikes: </string>
    <string name="translations_counter_label">Translations</string>
    <string name="sentences_counter_label">Sentences: </string>
    <string name="verified_counter_label">Verified: </string>
    <string name="friends">Friends</string>
    <string name="bio">Bio</string>

    <!--Other Labels-->
    <string name="source">Source</string>
    <string name="source2">Source: </string>
    <string name="textView_inverse_translation">Register also inverse translation</string>
    <string name="consider_case">Consider case (Upper Case / Lower Case)</string>
    <string name="request_language">Request Language: </string>
    <string name="select_meaning">Results for \"word\": </string>
    <string name="select_meaning1">Results for \"</string>
    <string name="select_meaning2">\": </string>

    <!--BUTTONS-->
    <string name="button_add">Add</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="words_of_the_day">Words Of The Day</string>
    <string name="my_lists">My Lists</string>
    <string name="community">Community</string>
    <string name="dictionary">Dictionary</string>
    <string name="add_word">Add Word</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu">Menu</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="requests">Requests</string>
    <string name="save_changes">Save Changes</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="chat">Chat</string>
    <string name="lists">Lists</string>
    <string name="add_new">Add New</string>
    <string name="search_lists">Search Lists</string>
    <string name="search_users">Search Users</string>
    <string name="english_korean">English -> Korean</string>
    <string name="korean_english">Korean -> English</string>
    <string name="korean">Korean</string>
    <string name="add_list">Add List</string>
    <string name="new_request">New Request</string>
    <string name="new_list">New List</string>


    <!--EDIT TEXT HINTS-->
    <string name="editText_word">Enter word</string>
    <string name="editText_translation">Enter translation</string>
    <string name="editText_source">Enter source (optional)</string>
    <string name="editText_bio">"Please, write a Bio.</string>
    <string name="editText_new_translation">You can write a new translation</string>
    <string name="search_another_word">Search for another word</string>
    <string name="editText_username">Type the username</string>
    <string name="enter_name_list">Enter a name for the list if new</string>

    <!--SPINNERS-->
    <string name="spinner_language_notSelected">--Select a language--</string>

    <!--SAMPLES-->
    <string name="sample_sentence">Sentence is defined as a statement or question made with group of words including a subject, verb and object.</string>
    <string name="sample_word">word</string>
    <string name="sample_word_description">A single distinct meaningful element of speech or writing, used with others (or sometimes alone) to form a sentence and typically shown with a space on either side when written or printed.</string>
    <string name="sample_source">https://www.google.co.kr/search?q=source&amp;oq=source&amp;aqs=chrome..69i57j0j69i60l3j0.1530j0j7&amp;sourceid=chrome&amp;ie=UTF-8</string>
    <string name="sample_username">user_1994_brazil</string>
    <string name="sample_bio">I am a student at Sunmmoon University and I love Dict Talk.</string>
    <string name="sample_dictionary">English - Portuguese</string>
    <string name="sample_hashtags">#noun #germanic</string>
    <string name="sample_time">6m ago</string>
    <string name="sample_reputation">542</string>
    <string name="sample_language">English</string>

    <!--ETC-->
    <string name="default_meaning">-1-</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_notifications">You don\'t have any notifications</string>
    <string name="page_under_construction">Page under construction</string>
    <string name="ago">" ago"</string>
    <string name="select_list">Please, select a list:</string>
    <string name="private_list">Private list</string>

    <string-array name="my_lists">
        <item>Animals</item>
        <item>Places</item>
        <item>Verbs - Basic 1</item>
        <item>Verbs - Basic 2</item>
        <item>Adjectives - Basic 1</item>
        <item>Professions</item>
    </string-array>

    <string-array name="languages">
        <item>@string/spinner_language_notSelected</item>
        <item>Korean</item>
        <item>English</item>
        <item>Portuguese</item>
    </string-array>

    <string-array name="requests">
        <item>Translation</item>
        <item>Sentence Example</item>
        <item>Synonymous</item>
        <item>Antonymous</item>
    </string-array>

    //ITEM STRINGS
    <string name="by">by </string>


    <string name="re_color">splash_background</string>
</resources>
