<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyListsMainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/appbar"/>

    <include
        layout="@layout/bottom_navigation"
        android:id="@+id/bottom_navigation" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText_word"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_below="@id/app_bar"
        android:layout_toStartOf="@+id/buttonSearch"/>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:text="@string/search"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentEnd="true"/>

    <ListView
        android:id="@+id/search_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutButtons"
        android:layout_below="@+id/editTextSearch"
        android:padding="20dp" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonAddList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_list"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonNewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:layout_weight="1"/>

    </LinearLayout>





</RelativeLayout>