<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DictionarySearchActivity">

    <include
        layout="@layout/appbar"
        android:id="@+id/app_bar"/>
    <include
        layout="@layout/bottom_navigation"
        android:id="@+id/bottom_navigation"/>

    <EditText
        android:id="@+id/editTextSearchWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@id/buttonSearchWord"
        android:inputType="textPersonName"
        android:hint="@string/editText_word" />

    <Button
        android:id="@+id/buttonSearchWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:text="@string/search" />

    <ListView
        android:id="@+id/listViewSearchWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSearchWord"
        android:layout_above="@+id/linearLayoutButtons"/>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonAddWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_word"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/buttonRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:layout_weight="1"
            />
    </LinearLayout>
</RelativeLayout>