<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/sample_language"/>

    <TextView
        android:id="@+id/textViewWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/textViewLanguage"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/sample_word"/>

    <TextView
        android:id="@+id/textViewMeaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/textViewWord"
        android:textSize="18sp"
        android:text="@string/sample_word_description"/>

    <TextView
        android:id="@+id/line"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textViewMeaning"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAA" />

</RelativeLayout>