<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunityMainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/appbar">
    </include>

    <include
        layout="@layout/bottom_navigation"
        android:id="@+id/bottom_navigation" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/app_bar"
        android:layout_above="@+id/bottom_navigation"
        android:gravity="fill_vertical"
        android:weightSum="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/searchListsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/search_lists"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/searchUsersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_users"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/chatMainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/chat"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>


    </LinearLayout>

</RelativeLayout>